package fr.univlille.labyrinth.view;

public enum Shape {
    CIRCLE,
    SQUARE,
    TRIANGLE
}
