package fr.univlille.labyrinth.view.labyrinth;

import fr.univlille.labyrinth.model.Observer;
import fr.univlille.labyrinth.model.maze.MazeWallChecker;
import fr.univlille.labyrinth.model.maze.ObservableMaze;
import fr.univlille.labyrinth.model.maze.Position;
import fr.univlille.labyrinth.model.maze.entities.Entity;
import fr.univlille.labyrinth.model.maze.entities.PlayerEntity;
import fr.univlille.labyrinth.model.maze.traps.trap.Trap;
import fr.univlille.labyrinth.view.GameViewConfig;
import javafx.scene.canvas.GraphicsContext;
import javafx.scene.paint.Color;

public class LocalLabyrinthCanvasView extends LabyrinthCanvasView {

    private static final int VIEW_RADIUS = 5;
    private static final int VIEW_SIZE = VIEW_RADIUS * 2 + 1;
    private static final double SIZE_RATIO = 0.6;

    public LocalLabyrinthCanvasView(ObservableMaze maze) {
        super(maze);
    }

    @Override
    public void update(ObservableMaze maze) {
        this.currentMaze = maze;

        if (canvas.getWidth() == 0 || canvas.getHeight() == 0) {
            return;
        }

        layout = layoutCalculator.calculate(canvas.getWidth(), canvas.getHeight(), VIEW_SIZE, VIEW_SIZE);

        draw();
    }

    @Override
    public void draw() {
        GraphicsContext gc = canvas.getGraphicsContext2D();
        gc.clearRect(0, 0, canvas.getWidth(), canvas.getHeight());

        PlayerEntity playerEntity = currentMaze.getEntityManager().getPlayerEntityByID(0);
        if (playerEntity == null) return;
        Position player = playerEntity.getPosition();

        dessinerCellules(gc, player);
        dessinerMursLocaux(gc, player);
        dessinerTrapsLocaux(gc, player);
        dessinerEntitiesLocaux(gc, player);

        if (renderingFilter.shouldDrawPlayer()) {
            dessinerJoueurLocal(gc);
        }
    }

    private void dessinerCellules(GraphicsContext gc, Position player) {
        for (int localY = 0; localY < VIEW_SIZE; localY++) {
            for (int localX = 0; localX < VIEW_SIZE; localX++) {
                int globalX = player.getX() - VIEW_RADIUS + localX;
                int globalY = player.getY() - VIEW_RADIUS + localY;

                Color cellColor = isOutOfBounds(globalX, globalY) ? Color.BLACK : GameViewConfig.PATH.getColor();

                gc.setFill(cellColor);
                gc.fillRect(
                    layout.getOffsetX() + localX * layout.getCellSize(),
                    layout.getOffsetY() + localY * layout.getCellSize(),
                    layout.getCellSize(),
                    layout.getCellSize()
                );
            }
        }
    }

    private void dessinerMursLocaux(GraphicsContext gc, Position player) {
        gc.setStroke(GameViewConfig.WALL.getColor());
        gc.setLineWidth(layout.getWallThickness());

        for (int localY = 0; localY < VIEW_SIZE; localY++) {
            for (int localX = 0; localX <= VIEW_SIZE; localX++) {
                int globalY = player.getY() - VIEW_RADIUS + localY;
                int globalX = player.getX() - VIEW_RADIUS + localX;

                if (shouldDrawVerticalWall(globalY, globalX)) {
                    drawVerticalWallAt(gc, localX, localY);
                }
            }
        }

        for (int localY = 0; localY <= VIEW_SIZE; localY++) {
            for (int localX = 0; localX < VIEW_SIZE; localX++) {
                int globalY = player.getY() - VIEW_RADIUS + localY;
                int globalX = player.getX() - VIEW_RADIUS + localX;

                if (shouldDrawHorizontalWall(globalY, globalX)) {
                    drawHorizontalWallAt(gc, localX, localY);
                }
            }
        }
    }

    private boolean shouldDrawVerticalWall(int globalY, int globalX) {
        return MazeWallChecker.isWall(currentMaze, globalY, globalX - 1, globalY, globalX);
    }

    private boolean shouldDrawHorizontalWall(int globalY, int globalX) {
        return MazeWallChecker.isWall(currentMaze, globalY - 1, globalX, globalY, globalX);
    }

    private void drawVerticalWallAt(GraphicsContext gc, int localX, int localY) {
        double x = layout.getOffsetX() + localX * layout.getCellSize();
        double y1 = layout.getOffsetY() + localY * layout.getCellSize();
        double y2 = y1 + layout.getCellSize();
        gc.strokeLine(x, y1, x, y2);
    }

    private void drawHorizontalWallAt(GraphicsContext gc, int localX, int localY) {
        double x1 = layout.getOffsetX() + localX * layout.getCellSize();
        double x2 = x1 + layout.getCellSize();
        double y = layout.getOffsetY() + localY * layout.getCellSize();
        gc.strokeLine(x1, y, x2, y);
    }

    private void dessinerEntitiesLocaux(GraphicsContext gc, Position playerPos) {
        for (Entity entity : currentMaze.getEntityManager().getEntities()) {
            int x = entity.getPosition().getX();
            int y = entity.getPosition().getY();

            if (renderingFilter.shouldRenderEntity(entity, x, y)) {
                int localX = x - playerPos.getX() + VIEW_RADIUS;
                int localY = y - playerPos.getY() + VIEW_RADIUS;

                if (localX >= 0 && localX < VIEW_SIZE && localY >= 0 && localY < VIEW_SIZE) {
                    GameViewConfig config = GameViewConfig.forEntity(entity);
                    componentRenderer.renderComponentAt(gc, config.getShape(), config.getColor(),
                        localX, localY, layout, SIZE_RATIO);
                }
            }
        }
    }

    private void dessinerTrapsLocaux(GraphicsContext gc, Position playerPos) {
        Trap[][] traps = currentMaze.getTrapManager().getTraps();
        for (int globalY = 0; globalY < traps.length; globalY++) {
            for (int globalX = 0; globalX < traps[globalY].length; globalX++) {
                Position local = toLocalCoordinates(globalX, globalY, playerPos);
                if (local != null) {
                    GameViewConfig config = GameViewConfig.forTrap(traps[globalY][globalX]);
                    componentRenderer.renderComponentAt(gc, config.getShape(), config.getColor(),
                        local.getX(), local.getY(), layout, SIZE_RATIO);
                }
            }
        }
    }

    private void dessinerJoueurLocal(GraphicsContext gc) {
        double tailleMarqueur = layout.getCellSize() * 0.6;
        double marginMarqueur = (layout.getCellSize() - tailleMarqueur) / 2;

        gc.setFill(GameViewConfig.PLAYER0.getColor());
        gc.fillOval(
                layout.getOffsetX() + VIEW_RADIUS * layout.getCellSize() + marginMarqueur,
                layout.getOffsetY() + VIEW_RADIUS * layout.getCellSize() + marginMarqueur,
                tailleMarqueur,
                tailleMarqueur);
    }

    private boolean isOutOfBounds(int globalX, int globalY) {
        Position p = new Position(globalX, globalY);
        return !MazeWallChecker.positionCorrecte(p, currentMaze);
    }

    private Position toLocalCoordinates(int globalX, int globalY, Position playerPos) {
        int localX = globalX - playerPos.getX() + VIEW_RADIUS;
        int localY = globalY - playerPos.getY() + VIEW_RADIUS;
        if (localX < 0 || localX >= VIEW_SIZE || localY < 0 || localY >= VIEW_SIZE) {
            return null;
        }
        return new Position(localX, localY);
    }
}
